[gd_scene load_steps=2 format=3 uid="uid://gjwcpwss10tg"]

[ext_resource type="Script" path="res://control.gd" id="1_5jw7u"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5jw7u")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 890.0
offset_top = 170.0
offset_right = 1077.0
offset_bottom = 345.0

[node name="PointsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 62.0
offset_top = 46.0
offset_right = 362.0
offset_bottom = 116.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1394.0
offset_top = 51.0
offset_right = 1845.0
offset_bottom = 159.0

[node name="Upgrade1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clicks +1"

[node name="Upgrade2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Autoclick"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Upgrade1" to="." method="_on_upgrade_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Upgrade2" to="." method="_on_upgrade_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
